--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
 @import "./variables.css";
 @import "./font.css";
 @import "./top-bar.css";
+@import "./navbar.css";
 html {
   box-sizing: border-box;
   font-size: 62.5%;
@@ -35,153 +36,3 @@ i {
 }
 /* finnish Default styles */
 
-/* start navbar styles */
-.main-header__content {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 2rem 1.5rem;
-}
-.main-header__right {
-  display: flex;
-}
-.main-header__menu {
-  display: flex;
-  gap: 2rem;
-  margin-right: 1rem;
-}
-.main-header__item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #7f8187;
-  position: relative;
-}
-.main-header__link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /* color: #7f8187; */
-}
-.main-header__link:hover {
-  color: #7f8187;
-}
-.main-header__link-icon {
-  margin-right: 0.7rem;
-}
-
-/* start drop down styles */
-.main-header__dropdown {
-  position: absolute;
-  background-color: var(--white-color);
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.12);
-  top: 5.5rem;
-  left: 0;
-  right: 0;
-  transition: all 200ms ease-in-out;
-  -webkit-transition: all 200ms ease-in-out;
-  -moz-transition: all 200ms ease-in-out;
-  -ms-transition: all 200ms ease-in-out;
-  -o-transition: all 200ms ease-in-out;
-  border-radius: 0.5rem;
-  -webkit-border-radius: 0.5rem;
-  -moz-border-radius: 0.5rem;
-  -ms-border-radius: 0.5rem;
-  -o-border-radius: 0.5rem;
-  width: 24rem;
-  z-index: 1;
-  padding: 1rem 0;
-  border-bottom: 3px solid var(--primary-color);
-  opacity: 0;
-  visibility: hidden;
-}
-.main-header__item:hover .main-header__dropdown {
-  opacity: 1;
-  visibility: visible;
-  top: 6.5rem;
-}
-.main-header__dropdown-link {
-  display: block;
-  padding: 0.6rem 2rem;
-  font-size: 1.4rem;
-  color: var(--dark-color);
-  transition: all 400ms ease;
-  -webkit-transition: all 400ms ease;
-  -moz-transition: all 400ms ease;
-  -ms-transition: all 400ms ease;
-  -o-transition: all 400ms ease;
-}
-.main-header__dropdown-link:hover {
-  color: #1e83f0;
-}
-
-/* finnish drop down styles */
-
-.main-header__left {
-  display: flex;
-  align-items: center;
-}
-.main-header__search-icon {
-  color: var(--white-color);
-  font-size: 2.2rem;
-}
-.main-header__search-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--primary-color);
-  width: 4.3rem;
-  height: 4.3rem;
-  border-radius: 0.5rem;
-  -webkit-border-radius: 0.5rem;
-  -moz-border-radius: 0.5rem;
-  -ms-border-radius: 0.5rem;
-  -o-border-radius: 0.5rem;
-}
-
-.main-header__cart-icon {
-  color: var(--dark-color);
-  font-size: 2.2rem;
-}
-.main-header__cart-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #f0f2f7;
-  width: 4.3rem;
-  height: 4.3rem;
-  border-radius: 0.5rem;
-  -webkit-border-radius: 0.5rem;
-  -moz-border-radius: 0.5rem;
-  -ms-border-radius: 0.5rem;
-  -o-border-radius: 0.5rem;
-  margin-right: 1rem;
-}
-.main-header__cart-btn:hover .main-header__cart-icon {
-  color: #1e83f0;
-}
-
-.main-header__profile {
-  display: flex;
-  align-items: center;
-  height: 4.3rem;
-  padding: 0 1.5rem;
-  color: var(--primary-color);
-  border: 2px solid var(--primary-color);
-  margin-right: 1rem;
-  border-radius: 0.5rem;
-  -webkit-border-radius: 0.5rem;
-  -moz-border-radius: 0.5rem;
-  -ms-border-radius: 0.5rem;
-  -o-border-radius: 0.5rem;
-  transition: all 400ms ease;
-  -webkit-transition: all 400ms ease;
-  -moz-transition: all 400ms ease;
-  -ms-transition: all 400ms ease;
-  -o-transition: all 400ms ease;
-}
-.main-header__profile:hover {
-  background-color: var(--primary-color);
-  color: var(--white-color);
-}
-/* finnish navbar styles */
