--- a/css/index.css
+++ b/css/index.css
@@ -86,6 +86,28 @@ i {
   font-size:2.8rem ;
   color: var(--white-color);
 }
+.landing-status{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 
+}
+.landing-status__item{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.landing-status__item svg {
+  fill: var(--white-color);
+}
+.landing-status__count{
+  margin-top: 0.5rem;
+  font-size: 2rem;
+  font-weight: bold;
+}
+.landing-status__text{
+  font-weight: bold;
+}
 /* finnish landing styles */
 
