latest courses header

--- a/css/index.css
+++ b/css/index.css
@@ -111,3 +111,50 @@ i {
 }
 /* finnish landing styles */
 
+/* start latest courses styles */
+.courses{
+  margin: 4rem 2rem;
+}
+.courses-header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.courses-header__right{
+  display: flex;
+  flex-direction: column;
+}
+.courses-header__text{
+  font-size: 1.5rem;
+  color: #9c9c9c;
+}
+.courses-header__link{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--white-color);
+  background-color: var(--primary-color);
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
+  -ms-border-radius: 0.5rem;
+  -o-border-radius: 0.5rem;
+}
+.courses-header__link:hover{
+  color: var(--white-color);
+}
+.courses-header__icon{
+  margin-right: 0.5rem;
+  font-size: 1.5rem;
+}
+
+
+
+
+
+
+
+
+/* finish latest courses styles */
+
