--- a/css/index.css
+++ b/css/index.css
@@ -38,7 +38,6 @@ i {
 }
 /* finnish Default styles */
 
-
 /* start latest courses styles */
 .courses {
   margin: 4rem 2rem;
@@ -78,6 +77,104 @@ i {
   font-size: 1.5rem;
 }
 
+.course-box {
+  background-color: var(--white-color);
+  box-shadow: 0 0 19px rgba(168, 172, 185, 0.3);
+  margin: 2rem 0;
+  border-radius: 1rem;
+  -webkit-border-radius: 1rem;
+  -moz-border-radius: 1rem;
+  -ms-border-radius: 1rem;
+  -o-border-radius: 1rem;
+  transition: all 400ms ease;
+  -webkit-transition: all 400ms ease;
+  -moz-transition: all 400ms ease;
+  -ms-transition: all 400ms ease;
+  -o-transition: all 400ms ease;
+}
+.course-box:hover {
+  transform: translateY(-0.6rem);
+  -webkit-transform: translateY(-0.6rem);
+  -moz-transform: translateY(-0.6rem);
+  -ms-transform: translateY(-0.6rem);
+  -o-transform: translateY(-0.6rem);
+}
+.course-box__img {
+  width: 100%;
+  border-radius: 1rem 1rem 0 0;
+  -webkit-border-radius: 1rem 1rem 0 0;
+  -moz-border-radius: 1rem 1rem 0 0;
+  -ms-border-radius: 1rem 1rem 0 0;
+  -o-border-radius: 1rem 1rem 0 0;
+}
+
+.course-box__main {
+  padding: 0 1.2rem;
+}
+.course-box__title {
+  display: block;
+  padding: 1rem 0;
+}
+.course-box__rating-teacher {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.course-box__teacher {
+  display: flex;
+  align-items: center;
+}
+.course-box__teacher-icon {
+  color: #6c757d;
+  font-size: 1.6rem;
+}
+.course-box__teacher-link {
+  color: #6c757d;
+  font-size: 1.2rem;
+  margin-right: 0.4rem;
+}
+.course-box__star {
+  margin: -0.2rem;
+}
+
+.course-box__status {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 0;
+}
+.course-box__users-icon {
+  color: #6c757d;
+  font-size: 1.6rem;
+}
+.course-box__users-text {
+  color: #6c757d;
+  font-size: 1.4rem;
+}
+.course-box__price {
+  color: #9c9c9c;
+  font-size: 1.8rem;
+}
+.course-box__footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1.3rem 0;
+  border-top: 1px solid #e8e8e8;
+}
+.course-box__footer-link{
+  color: var(--primary-color);
+  font-size: 1.5rem;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.course-box__footer-icon{
+  font-size: 1.9rem;
+  margin-right: 0.5rem;
+}
+
 /* finish latest courses styles */
 
 /* start Helper Classes */
@@ -107,7 +204,7 @@ i {
   -o-transform: rotate(8deg);
 }
 .title::after {
-  content: '';
+  content: "";
   width: 100%;
   max-width: 250px;
   height: 60%;
