--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,8 @@
 @import "./landing.css";
 @import "./latestCourses.css";
 @import "./aboutUs.css";
+@import "./popular&pre-sell.css";
+@import "./articles.css";
 
 html {
   box-sizing: border-box;
@@ -78,24 +80,3 @@ i {
 }
 /* finish Helper Classes */
 
-/* start popular courses styles */
-.popular, .presell{
-  margin: 5rem 0;
-}
-
-.popular__slider .course-box, .presell__slider .course-box {
-  margin: 0 1.3rem;
-  box-shadow:0 0 10px rgba(168, 172, 185, 0.3) ;
-}
-.popular__slider .course-box:hover, .presell__slider .course-box:hover{
-  transform: none;
-  -webkit-transform: none;
-  -moz-transform: none;
-  -ms-transform: none;
-  -o-transform: none;
-}
-.popular__slider, .presell__slider{
-  margin: 4rem 0;
-  position: relative;
-}
-/* finish popular courses styles */
