--- a/css/index.css
+++ b/css/index.css
@@ -92,12 +92,48 @@ i {
   margin-bottom: 5rem;
   position: relative;
 }
+.footer-widgets::before{
+  content: '';
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: -1.5rem;
+  margin: 0 auto;
+  width: 50rem;
+  height: 4rem;
+  background-color: var(--primary-color);
+  z-index: -1;
+  border-radius: 5rem;
+  -webkit-border-radius: 5rem;
+  -moz-border-radius: 5rem;
+  -ms-border-radius: 5rem;
+  -o-border-radius: 5rem;
+}
 .footer-widgets__title{
   display: block;
   font-size: 1.7rem;
   font-weight: bold;
   margin-bottom: 2rem;
   position: relative;
+}
+.footer-widgets__title::before{
+  content: '';
+  position: absolute;
+  width: 3.5rem;
+  height: 3.5rem;
+  background-color: var(--primary-color);
+  border-radius: 0.7rem;
+  -webkit-border-radius: 0.7rem;
+  -moz-border-radius: 0.7rem;
+  -ms-border-radius: 0.7rem;
+  -o-border-radius: 0.7rem;
+  right: 1rem;
+  opacity: 0.3;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
 }
 .footer-widgets__text{
   color: #7d7d7f;
