corses topbar left styled

--- a/css/category.css
+++ b/css/category.css
@@ -11,3 +11,42 @@
 @import "./popular&pre-sell.css";
 @import "./articles.css";
 @import "./footer.css";
+
+/* Start Courses Top-bar-Styles */
+.courses {
+  margin: 4rem 0;
+}
+.courses-top-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2.2rem;
+  box-shadow: 0 0 13px 1px rgba(70, 72, 77, 0.08);
+}
+
+/* Right */
+
+.corses-top-bar__form {
+  position: relative;
+  width: 30rem;
+}
+.corses-top-bar__input {
+  font-size: 1.5rem;
+  width: 100%;
+  border: 1px solid #dcdcdc;
+  padding: 0.8rem 1.5rem 0.8rem 4.2rem;
+  border-radius: 0.3rem;
+  -webkit-border-radius: 0.3rem;
+  -moz-border-radius: 0.3rem;
+  -ms-border-radius: 0.3rem;
+  -o-border-radius: 0.3rem;
+}
+.corses-top-bar__search-icon {
+  position: absolute;
+  left: 1rem;
+  top: 1rem;
+  color: #7d7e7f;
+  font-size: 1.8rem;
+  cursor: pointer;
+}
+/* Fiinish Courses Top-bar-Styles */
