--- a/css/course.css
+++ b/css/course.css
@@ -147,3 +147,44 @@
 
 
 /* finish course boxes styles */
+
+/* Start course progress styles*/
+.course-progress{
+  border-radius: 1rem;
+  -webkit-border-radius: 1rem;
+  -moz-border-radius: 1rem;
+  -ms-border-radius: 1rem;
+  -o-border-radius: 1rem;
+  margin: 3rem 0;
+  padding:2rem 2rem 1.2rem 2rem ;
+  background-color: #f0f2f7;
+}
+.course-progress__header{
+  display: flex;
+  align-items: center;
+  margin-bottom:1.5rem ;
+}
+.course-progress__icon{
+  font-size: 2.5rem;
+  color: #7b868a;
+
+}
+.course-progress__title{
+  margin-right: 1.5rem;
+  color: #7b868a;
+  font-size: 1.5rem;
+}
+.course-progress__bar{
+  border-radius: 10rem;
+  -webkit-border-radius: 10rem;
+  -moz-border-radius: 10rem;
+  -ms-border-radius: 10rem;
+  -o-border-radius: 10rem;
+  height: 1rem;
+}
+.progress-bar{
+  background-color: #1fbd50;
+}
+
+
+/* finish course progress styles*/
