--- a/css/course.css
+++ b/css/course.css
@@ -205,17 +205,15 @@
   -ms-border-radius: 1rem;
   -o-border-radius: 1rem;
 }
-.introduction__text{
+.introduction__text {
   margin-top: 2rem;
   color: #7a7a7a;
   font-size: 1.5rem;
-
 }
-.introduction__btns{
+.introduction__btns {
   margin-top: 4rem;
-
 }
-.introduction__btns-item{
+.introduction__btns-item {
   color: var(--primary-color);
   border: 2px solid var(--primary-color);
   border-radius: 0.5rem;
@@ -227,9 +225,68 @@
   font-weight: bold;
   font-size: 1.5rem;
 }
-.introduction__btns-item:hover{
+.introduction__btns-item:hover {
   color: var(--white-color);
   background-color: var(--primary-color);
 }
 
+.introduction__topic {
+  margin-top: 4rem;
+}
+.accordion {
+  margin-bottom: 2rem;
+}
+.accordion-item {
+  background-color: #f7f9fa;
+}
+.accordion-button {
+  background-color: #f7f9fa;
+  font-size: 1.5rem;
+  padding: 1.25rem;
+}
+.accordion-button:not(.collapsed) {
+  background-color: #f7f9fa;
+}
+.accordion-button::after {
+  position: absolute;
+  left: 1.5rem;
+  width: 2rem;
+  height: 2rem;
+  background-position: center;
+}
+.introduction__accordion-body {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5rem 1.25rem;
+}
+.introduction__accordion-right {
+  display: flex;
+  align-items: center;
+}
+.introduction__accordion-count {
+  width: 3.5rem;
+  height: 3.5rem;
+  border: 1px solid #bfbfbf;
+  color: #656464;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+.introduction__accordion-icon {
+  margin: 0 1.5rem;
+  color: #939aa3;
+  font-size: 1.8rem;
+}
+.introduction__accordion-link {
+  color: #161616;
+}
+.introduction__accordion-time {
+  color: #7a7a7a;
+}
 /* finish Introduction styles */
