--- a/css/course.css
+++ b/css/course.css
@@ -290,3 +290,73 @@
   color: #7a7a7a;
 }
 /* finish Introduction styles */
+
+/* Start Teacher Details styles */
+.teacher-details {
+  border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
+  -ms-border-radius: 0.5rem;
+  -o-border-radius: 0.5rem;
+  padding: 2rem;
+  margin-top: 2rem;
+  box-shadow: 0 0 13px 1px rgba(70, 72, 77, 0.08);
+}
+.teacher-details__header {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+.teacher-details__header-right {
+  display: flex;
+  align-items: center;
+}
+.teacher-details__header-img {
+  width: 62px;
+  height: auto;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  box-shadow: 2px 2px 20px #00000021;
+}
+.teacher-details__header-titles {
+  display: flex;
+  flex-direction: column;
+  margin-right: 2rem;
+}
+.teacher-details__header-link {
+  text-decoration: none;
+  color: #7b868a;
+}
+.teacher-details__header-skill {
+  color: #7b868a;
+  font-size: 1.2rem;
+}
+.teacher-details__header-left {
+  display: flex;
+  align-items: center;
+  color: var(--white-color);
+  background-color: var(--primary-color);
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
+  -ms-border-radius: 0.5rem;
+  -o-border-radius: 0.5rem;
+}
+.teacher-details__header-icon {
+  font-size: 1.8rem;
+}
+.teacher-details__header-name {
+  font-size: 1.6rem;
+  font-weight: bold;
+  margin-right: 0.4rem;
+}
+.teacher-details__footer {
+  margin-top: 1rem;
+  color: #7b868a;
+  font-size: 14px;
+}
+/* finish Teacher Details styles */
