side bar register designed

--- a/css/course.css
+++ b/css/course.css
@@ -360,3 +360,41 @@
   font-size: 14px;
 }
 /* finish Teacher Details styles */
+
+/* start sidebar styles */
+.courses-info {
+  top: 2rem;
+  position: sticky;
+}
+.course-info {
+  border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
+  -ms-border-radius: 0.5rem;
+  -o-border-radius: 0.5rem;
+  margin-top: 1rem;
+  padding: 2.2rem;
+  box-shadow: 0 0 13px 1px rgba(70, 72, 77, 0.08);
+  border: 1px solid #f2f2f2;
+}
+.course-info__register {
+  text-align: center;
+  background-color: #1fbd50;
+  padding: 1.5rem 1rem;
+  border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
+  -ms-border-radius: 0.5rem;
+  -o-border-radius: 0.5rem;
+  box-shadow: 0 2px 12px rgba(31, 189, 80, 36%);
+}
+.course-info__register-title {
+  color: var(--white-color);
+  font-size: 1.7rem;
+  font-weight: bold;
+}
+.course-info__register-icon {
+  font-size: 2rem;
+}
+
+/* finish sidebar styles */
