--- a/css/course.css
+++ b/css/course.css
@@ -397,4 +397,62 @@
   font-size: 2rem;
 }
 
+.course-info__top {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1.5rem;
+  border: 2px solid #f0f2f7;
+  border-radius: 1rem;
+  -webkit-border-radius: 1rem;
+  -moz-border-radius: 1rem;
+  -ms-border-radius: 1rem;
+  -o-border-radius: 1rem;
+}
+.course-info__total-sale-icon {
+  color: #555555;
+  font-size: 2.7rem;
+}
+.course-info__total-sale-text {
+  color: #7f8187;
+}
+.course-info__total-sale-number {
+  color: var(--white-color);
+  background-color: #c4c7cf;
+  border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
+  -ms-border-radius: 0.5rem;
+  -o-border-radius: 0.5rem;
+  padding: 0.3rem 1.2rem;
+}
+.course-info__bottom {
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 2rem;
+  color: #7b868a;
+}
+.course-info__total-comment,
+.course-info__total-view {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.course-info__total-comment::before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 1px;
+  background-color: #e5e5e5;
+  left: -3rem;
+}
+.course-info__total-view-icon,
+.course-info__total-comment-icon {
+  font-size: 2.2rem;
+}
+.course-info__total-comment-text,
+.course-info__total-view-text {
+  font-size: 1.4rem;
+  margin-right: 1rem;
+}
 /* finish sidebar styles */
