course info short url designed

--- a/css/course.css
+++ b/css/course.css
@@ -455,4 +455,30 @@
   font-size: 1.4rem;
   margin-right: 1rem;
 }
+
+.course-info__header-short-url {
+  display: flex;
+  align-items: center;
+  color: #7b868a;
+}
+.course-info__short-url-icon {
+  font-size: 2rem;
+}
+.course-info__short-url-text {
+  margin-right: 0.5rem;
+  font-size: 1.7rem;
+}
+.course-info__short-url {
+  display: block;
+  margin: 1rem 0;
+  border: 1px solid #dcdcdc;
+  color: #a7a7a7;
+  border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
+  -ms-border-radius: 0.5rem;
+  -o-border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
+  font-size: 1.4rem;
+}
 /* finish sidebar styles */
