course info topic designed

--- a/css/course.css
+++ b/css/course.css
@@ -481,4 +481,15 @@
   padding: 0.5rem 1rem;
   font-size: 1.4rem;
 }
+
+.course-info__topic-title{
+  display: block;
+  color: var(--dark-color);
+  font-size: 1.8rem;
+}
+.course-info__topic-text{
+  font-size: 1.5rem;
+  color: #7d7e7f;
+}
+
 /* finish sidebar styles */
