--- a/css/course.css
+++ b/css/course.css
@@ -60,9 +60,7 @@
 /* finish Breadcrumb styles */
 
 /* Start course info styles */
-.course-info {
-  margin-bottom: 6rem;
-}
+
 .course-info__link {
   font-size: 1.2rem;
   color: var(--primary-color);
@@ -482,14 +480,43 @@
   font-size: 1.4rem;
 }
 
-.course-info__topic-title{
+.course-info__topic-title {
   display: block;
   color: var(--dark-color);
   font-size: 1.8rem;
 }
-.course-info__topic-text{
+.course-info__topic-text {
   font-size: 1.5rem;
   color: #7d7e7f;
+}
+
+.course-info__courses-title {
+  font-size: 1.8rem;
+  display: block;
+  color: var(--dark-color);
+  margin-bottom: 1.5rem;
+}
+
+.course-info__courses-list-item {
+  margin-bottom: 2rem;
+}
+.course-info__courses-link {
+  display: flex;
+  align-items: center;
+}
+.course-info__courses-img{
+  width: 70px;
+  border-radius: .5rem;
+  -webkit-border-radius: .5rem;
+  -moz-border-radius: .5rem;
+  -ms-border-radius: .5rem;
+  -o-border-radius: .5rem;
+}
+.course-info__courses-text{
+  font-size: 1.3rem;
+  margin-right: .5rem;
+  color: #8d8d8d;
+  font-weight: bold;
 }
 
 /* finish sidebar styles */
