--- a/css/course.css
+++ b/css/course.css
@@ -6,58 +6,7 @@
 @import "./course_box.css";
 @import "./footer.css";
 @import "./helper.css";
-
-/* Start Breadcrumb styles */
-.breadcrumb {
-  margin-bottom: 2rem;
-}
-.breadcrumb__content {
-  display: flex;
-  background-color: #f0f2f7;
-  padding: 1.5rem 2rem;
-  border-radius: 1rem;
-  -webkit-border-radius: 1rem;
-  -moz-border-radius: 1rem;
-  -ms-border-radius: 1rem;
-  -o-border-radius: 1rem;
-}
-.breadcrumb__home-content-icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 3.6rem;
-  height: 3.6rem;
-  background-color: var(--white-color);
-  border-radius: 1rem;
-  -webkit-border-radius: 1rem;
-  -moz-border-radius: 1rem;
-  -ms-border-radius: 1rem;
-  -o-border-radius: 1rem;
-}
-.breadcrumb__home-icon {
-  font-size: 1.8rem;
-  color: #909aa7;
-}
-.breadcrumb__list {
-  display: flex;
-  align-items: center;
-  margin-right: 1.5rem;
-}
-.breadcrumb__link {
-  display: flex;
-  align-items: center;
-  font-size: 1.5rem;
-  color: #7f8187;
-}
-.breadcrumb__link:hover {
-  color: #7f8187;
-}
-.breadcrumb__icon {
-  color: #7f8187;
-  font-size: 1.5rem;
-  margin: 0 0.7rem;
-}
-/* finish Breadcrumb styles */
+@import "./Breadcrumb.css";
 
 /* Start course info styles */
 
@@ -504,17 +453,17 @@
   display: flex;
   align-items: center;
 }
-.course-info__courses-img{
+.course-info__courses-img {
   width: 70px;
-  border-radius: .5rem;
-  -webkit-border-radius: .5rem;
-  -moz-border-radius: .5rem;
-  -ms-border-radius: .5rem;
-  -o-border-radius: .5rem;
+  border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
+  -ms-border-radius: 0.5rem;
+  -o-border-radius: 0.5rem;
 }
-.course-info__courses-text{
+.course-info__courses-text {
   font-size: 1.3rem;
-  margin-right: .5rem;
+  margin-right: 0.5rem;
   color: #8d8d8d;
   font-weight: bold;
 }
