sidecourse box created

--- a/css/blog.css
+++ b/css/blog.css
@@ -6,4 +6,5 @@
 @import "./course_box.css";
 @import "./footer.css";
 @import "./helper.css";
-@import './Breadcrumb.css'
+@import './Breadcrumb.css';
+@import './sideBarCoursesBox.css'
