--- a/css/blog.css
+++ b/css/blog.css
@@ -6,5 +6,32 @@
 @import "./course_box.css";
 @import "./footer.css";
 @import "./helper.css";
-@import './Breadcrumb.css';
-@import './sideBarCoursesBox.css'
+@import "./Breadcrumb.css";
+@import "./sideBarCoursesBox.css";
+
+.course-info{
+    overflow: hidden;
+}
+
+.course-info__courses-title {
+  position: relative;
+}
+.course-info__courses-title::before{
+    content: '';
+    position: absolute;
+    width: 22px;
+    height: 39px;
+    background-color: var(--primary-color);
+    border-radius: 8px 0 0 12px;
+    -webkit-border-radius: 8px 0 0 12px;
+    -moz-border-radius: 8px 0 0 12px;
+    -ms-border-radius: 8px 0 0 12px;
+    -o-border-radius: 8px 0 0 12px;
+    top: -5px;
+    right: -27px;
+    transform: skew(-10deg);
+    -webkit-transform: skew(-10deg);
+    -moz-transform: skew(-10deg);
+    -ms-transform: skew(-10deg);
+    -o-transform: skew(-10deg);
+}
