--- a/css/blog.css
+++ b/css/blog.css
@@ -9,6 +9,45 @@
 @import "./Breadcrumb.css";
 @import "./sideBarCoursesBox.css";
 
+/* Start Main Info Section styles */
+.article {
+  padding: 2.4rem;
+  box-shadow: 0 5px 30px rgba(70, 72, 77, 0.08);
+  border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
+  -ms-border-radius: 0.5rem;
+  -o-border-radius: 0.5rem;
+}
+.article__title {
+  font-size: 2.6rem;
+  font-weight: bold;
+  color: var(--dark-color);
+  border-bottom: 2px solid #f3f3f3;
+  padding-bottom: 1rem;
+}
+.article__header {
+  display: flex;
+  align-items: center;
+  padding-top: 1rem;
+}
+.article-header__item {
+  margin-left: 2rem;
+}
+.article-header__icon{
+  font-size: 1.7rem;
+  color: #c7c7c7;
+}
+.article-header__text{
+  font-size: 1.2rem;
+  color: #8f8f8f;
+}
+.article__banner{
+  margin-top: 4rem;
+}
+
+/* Finish Main Info Section styles */
+
 /* Start Side bar styles */
 .course-info {
   overflow: hidden;
@@ -72,15 +111,15 @@
   margin-right: 0.5rem;
 }
 
-.last-articles__list{
-    margin-top: 2rem;
+.last-articles__list {
+  margin-top: 2rem;
 }
-.last-articles__item{
-    border-bottom: 1px solid #eeeeee;
-    padding: 1rem 0;
+.last-articles__item {
+  border-bottom: 1px solid #eeeeee;
+  padding: 1rem 0;
 }
-.last-articles__link{
-    font-size: 1.5rem;
+.last-articles__link {
+  font-size: 1.5rem;
 }
 
 /* Finish Side bar styles */
