--- a/css/blog.css
+++ b/css/blog.css
@@ -34,16 +34,31 @@
 .article-header__item {
   margin-left: 2rem;
 }
-.article-header__icon{
+.article-header__icon {
   font-size: 1.7rem;
   color: #c7c7c7;
 }
-.article-header__text{
+.article-header__text {
   font-size: 1.2rem;
   color: #8f8f8f;
 }
-.article__banner{
+.article__banner {
   margin-top: 4rem;
+  width: 100%;
+}
+
+.article__score {
+  display: flex;
+  align-items: center;
+  margin: 2rem 0;
+}
+.article__score-icon {
+  margin-left: -0.4rem;
+}
+.article__score-text {
+  margin-right: 2rem;
+  font-size: 1.7rem;
+  color: #7d7d7f;
 }
 
 /* Finish Main Info Section styles */
