--- a/css/blog.css
+++ b/css/blog.css
@@ -91,7 +91,7 @@
   display: block;
   margin: 0 auto;
 }
-.article-section{
+.article-section {
   margin: 5rem 0;
 }
 .article-section__title {
@@ -100,28 +100,79 @@
   font-weight: bold;
   line-height: 1.2;
 }
-.article-section__text{
+.article-section__text {
   margin: 2rem 0;
 }
-.article-section__img{
+.article-section__img {
   display: block;
   margin: 0 auto;
 }
 
-.article-social-media{
+.article-social-media {
   display: flex;
   align-items: center;
-
 }
-.article-social-media__text{
+.article-social-media__text {
   font-size: 1.5rem;
   color: #7d7e7f;
 }
-.article-social-media__link{
+.article-social-media__link {
   display: flex;
   align-items: center;
   margin: 0.5rem;
   color: #7b868a;
+}
+
+.suggestion-articles {
+  margin: 4rem 0;
+  padding: 3.5rem 2.5rem;
+  background-color: #f0f2f7;
+  border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
+  -ms-border-radius: 0.5rem;
+  -o-border-radius: 0.5rem;
+}
+.suggestion-articles__content {
+  display: flex;
+  align-items: center;
+}
+.suggestion-articles__right {
+  position: relative;
+}
+.suggestion-articles__left {
+  display: flex;
+  flex-direction: row-reverse;
+  position: relative;
+}
+.suggestion-articles__right::before {
+  content: "قدیمی تر";
+  position: absolute;
+  top: -2rem;
+  left: 2rem;
+  font-size: 1.8rem;
+  color: #adb5db;
+  font-weight: bold;
+  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+}
+.suggestion-articles__left::before {
+  content: "جدید تر";
+  position: absolute;
+  top: -2rem;
+  right: 2rem;
+  font-size: 1.5rem;
+  color: #adb5db;
+}
+.suggestion-articles__icon-link {
+  color: #adb5db;
+}
+.suggestion-articles__link {
+  text-align: center;
+  margin: 0 2rem;
 }
 
 /* Finish Main Info Section styles */
