--- a/css/blog.css
+++ b/css/blog.css
@@ -197,28 +197,29 @@
 }
 .comments__content-textarea {
   height: 18.5rem;
-  border-radius:0.5rem ;
-  -webkit-border-radius:0.5rem ;
-  -moz-border-radius:0.5rem ;
-  -ms-border-radius:0.5rem ;
-  -o-border-radius:0.5rem ;
+  border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
+  -ms-border-radius: 0.5rem;
+  -o-border-radius: 0.5rem;
   border: 1px solid #dcdcdc;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.07);
 }
-.comments__button{
-  margin-top: 2rem;
+.comments__button {
+  /* margin-top: 2rem; */
   max-width: 15rem;
   padding: 0.8rem 1.7rem;
   background-color: var(--primary-color);
   color: var(--white-color);
-  border:none;
+  border: none;
   border-radius: 0.5rem;
   -webkit-border-radius: 0.5rem;
   -moz-border-radius: 0.5rem;
   -ms-border-radius: 0.5rem;
   -o-border-radius: 0.5rem;
   font-size: 1.5rem;
-  margin-bottom: 3rem;
+  /* margin-bottom: 3rem; */
+  margin: 2rem 0 3rem;
 }
 
 /* Finish Main Info Section styles */
